# cwl2puml

./: .coverage  .gitignore  404.html  CHANGELOG.md  README.md  Taskfile.yaml  coverage.xml  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml  test.puml
.github/: dependabot.yml
.github/workflows/: docs.yaml  package.yaml
api/latest/cwl2puml/: index.html
api/latest/cwl2puml/cli/: index.html
docs/: examples.ipynb  index.md
examples/: index.html
patterns/: index.html
search/: search_index.json
src/cwl2puml/: __about__.py  __init__.py  cli.py
src/cwl2puml/templates/: activity.puml  class.puml  component.puml  ogc_processes_inputs.puml  ogc_processes_outputs.puml  sequence.puml  state.puml
tests/: test_conversion.py
