[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cwl2puml"
dynamic = ["version"]
description = 'CWL Worflows processor to generate PlantUML diagrams'

readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "info@terradue.com" },
  { name = "Simone Tripodi", email = "info@terradue.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "cwl-loader>=0.15.0",
  "cwltool>=3.1.20250715140722",
  "cwl-utils>=0.40",
  "click>=8.2.1",
  "Jinja2>=3.1.6",
  "loguru",
  "plantuml"
]

[project.scripts]
cwl2puml = "cwl2puml.cli:main"

[project.urls]
Documentation = "https://github.com/Terradue/cwl2puml#readme"
Issues = "https://github.com/Terradue/cwl2puml/issues"
Source = "https://github.com/Terradue/cwl2puml"

[tool.hatch.version]
path = "src/cwl2puml/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cwl2puml tests}"

[tool.coverage.run]
source_pkgs = ["cwl2puml", "tests"]
branch = true
parallel = true
omit = [
  "src/cwl2puml/__about__.py",
]

[tool.coverage.paths]
cwl2puml = ["src/cwl2puml", "*/cwl2puml/src/cwl2puml"]
tests = ["tests", "*/cwl2puml/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.test]
skip-install = false

dependencies = [
  "cwl-loader>=0.15.0",
  "cwltool>=3.1.20250715140722",
  "cwl-utils>=0.40",
  "click>=8.2.1",
  "Jinja2>=3.1.6",
  "loguru",
  "plantuml",
  "pytest>=8.0",
  "pytest-cov",
  "ruff",
]

[tool.hatch.envs.test.scripts]
test = "pytest"
test-q = "pytest -q"
test-cov = "pytest --cov=cwl2puml --cov-report=xml --cov-report=html"
test-show-setup = "pytest --setup-show"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]


[tool.hatch.envs.dev]
description = "Development environment"
dependencies = [
  "pytest>=8.0",
  "ruff",
]


[tool.hatch.envs.dev.scripts]
lint = "ruff format src tests"
check = "ruff check --fix src tests"
